# schlau

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pr.yml
benches/: criterion.rs  crypto.rs  ink.rs  solidity.rs
contracts/ink/computation/: Cargo.toml  lib.rs
contracts/ink/crypto/: Cargo.toml  lib.rs
contracts/ink/ed25519_verifier/: Cargo.toml  lib.rs
contracts/ink/nop/: Cargo.toml  lib.rs
contracts/ink/winter/: Cargo.toml  lib.rs
contracts/solidity/: Arithmetics.sol  Computation.abi  Computation.sol  FibonacciBinet.sol  FibonacciIterative.sol  NativeHasher.sol  Ripemd160.sol  compile_test.sol
solang-llvm/: build.sh
src/: drink_api.rs  drink_api_wasm.rs  evm.rs  ink.rs  ink_build.rs  ink_drink.rs  lib.rs  main.rs  solang.rs  solc.rs
src/evm/: mod.rs  runtime.rs
tests/: correctness.rs  solidity.rs
