[workspace]
exclude = [
    "contracts",
]

[package]
name = "schlau"
version = "0.1.0"
edition = "2021"

[lib]
name = "schlau"

[dependencies]
anyhow = "1.0.44"
clap = { version = "4.4.8", features = ["derive"] }
criterion = "0.5.1"
parity-scale-codec = { version = "3.6.9" }
subxt-signer = "0.32.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

contract-build = { package = "contract-build", git = "https://github.com/paritytech/cargo-contract", branch = "at/riscv" }
contract-metadata = { package = "contract-metadata", git = "https://github.com/paritytech/cargo-contract", branch = "at/riscv" }
drink-riscv = { git = "https://github.com/ascjones/drink", branch = "riscv", package = "drink", optional = true }
drink-wasm = { git = "https://github.com/ascjones/drink", branch = "wasm", package = "drink", optional = true }
ink = { git = "https://github.com/paritytech/ink", branch = "at/riscv", package = "ink", default-features = false }
hex = "0.4.3"
alloy-primitives = "0.5.2"
alloy-json-abi = "0.5.2"
alloy-dyn-abi = "0.5.2"
serde_json = "1.0.64"

# pallet-evm API
sp-externalities = { version = "0.19.0", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", package = "sp-externalities" }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", package = "sp-io" }
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", package = "sp-core" }
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", package = "sp-runtime" }
sp-std = { version = "8.0.0", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", package = "sp-std" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", package = "pallet-balances" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", package = "pallet-timestamp" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", package = "frame-support" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", branch = "master", package = "frame-system" }
fp-evm = { version = "3.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "master", package = "fp-evm", default-features = false }
pallet-evm = { version = "6.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "master", package = "pallet-evm" }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

# ink! contracts
crypto = { path = "./contracts/ink/crypto", features = ["ink-as-dependency"] }
computation = { path = "./contracts/ink/computation", features = ["ink-as-dependency"] }
config = "0.13.4"

[[bench]]
name = "ink"
harness = false

[[bench]]
name = "solidity"
harness = false

[features]
default = []
wasm = [
    "drink-wasm",
]
riscv = [
    "drink-riscv",
]



